# constraint-decoding-trie-static

./: Cargo.toml  README.md
benches/: vntk_benches.rs
src/: decoder.rs  dense_mask.rs  lib.rs  transition.rs  types.rs  vntk.rs
src/tests/: mod.rs  test_base.rs  test_decoder.rs  test_dense_mask.rs  test_transition.rs  test_types.rs  test_vntk.rs
